--- a/layouts/default.html
+++ b/layouts/default.html
@@ -10,16 +10,16 @@
   <header>
     <nav>
       <ul>
-        <li><a href="{{ "/" | relative_url }}">Home</a></li>
-        <li><a href="{{ "/introduction" | relative_url }}">Introduction</a></li>
-        <li><a href="{{ "/Project%20Background" | relative_url }}">Project Background</a></li>
-        <li><a href="{{ "/Project%20Summary" | relative_url }}">Project Summary</a></li>
-        <li><a href="{{ "/Data%20Preparation" | relative_url }}">Data Preparation</a></li>
-        <li><a href="{{ "/Analysis" | relative_url }}">Analysis</a></li>
-        <li><a href="{{ "/Dashboard" | relative_url }}">Dashboard</a></li>
-        <li><a href="{{ "/Business%20Impact" | relative_url }}">Business Impact</a></li>
-        <li><a href="{{ "/Conclusion" | relative_url }}">Conclusion</a></li>
-        <li><a href="{{ "/References" | relative_url }}">References</a></li>
+        <li><a href="{{ site.baseurl }}/Home">Home</a></li>
+        <li><a href="{{ site.baseurl }}/Introduction">Introduction</a></li>
+        <li><a href="{{ site.baseurl }}/Project%20Background">Project Background</a></li>
+        <li><a href="{{ site.baseurl }}/Project%20Summary">Project Summary</a></li>
+        <li><a href="{{ site.baseurl }}/Data%20Preparation">Data Preparation</a></li>
+        <li><a href="{{ site.baseurl }}/Analysis">Analysis</a></li>
+        <li><a href="{{ site.baseurl }}/Dashboard">Dashboard</a></li>
+        <li><a href="{{ site.baseurl }}/Business%20Impact">Business Impact</a></li>
+        <li><a href="{{ site.baseurl }}/Conclusion">Conclusion</a></li>
+        <li><a href="{{ site.baseurl }}/References">References</a></li>
       </ul>
     </nav>
   </header>
