--- a/layouts/default.html
+++ b/layouts/default.html
@@ -12,12 +12,12 @@
       <ul>
         <li><a href="{{ site.baseurl }}/Home">Home</a></li>
         <li><a href="{{ site.baseurl }}/Introduction">Introduction</a></li>
-        <li><a href="{{ site.baseurl }}/Project%20Background">Project Background</a></li>
-        <li><a href="{{ site.baseurl }}/Project%20Summary">Project Summary</a></li>
-        <li><a href="{{ site.baseurl }}/Data%20Preparation">Data Preparation</a></li>
+        <li><a href="{{ site.baseurl }}/Project-Background">Project Background</a></li>
+        <li><a href="{{ site.baseurl }}/Project-Summary">Project Summary</a></li>
+        <li><a href="{{ site.baseurl }}/Data-Preparation">Data Preparation</a></li>
         <li><a href="{{ site.baseurl }}/Analysis">Analysis</a></li>
         <li><a href="{{ site.baseurl }}/Dashboard">Dashboard</a></li>
-        <li><a href="{{ site.baseurl }}/Business%20Impact">Business Impact</a></li>
+        <li><a href="{{ site.baseurl }}/Business-Impact">Business Impact</a></li>
         <li><a href="{{ site.baseurl }}/Conclusion">Conclusion</a></li>
         <li><a href="{{ site.baseurl }}/References">References</a></li>
       </ul>
