--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,8 +1,6 @@
 ---
-# This layout wraps around the theme's default layout
 layout: default
 ---
-
+<link rel="stylesheet" href="{{ site.baseurl }}/assets/css/styles.css">
 {% include header.html %}
-
 {{ content }}
